<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/my"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        
        android:layout_x="86dp"
        android:layout_y="330dp"
        android:background="@drawable/customb"
        android:text="@string/explore" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        
        android:layout_x="86dp"
        android:layout_y="270dp"
        android:background="@drawable/customb"
        android:text="@string/around" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="75dp"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/txtvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_x="97dp"
        android:layout_y="55dp"
        android:text="@string/OPERATIONS"
        android:textColor="#ff2A682B"
        android:textSize="20dp"
        android:textStyle="bold" />
    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="20dip"   
    android:paddingTop="3dip" >

    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/QUICK_AID"
        android:textColor="#ff000000"
        android:textSize="20dip"
        android:textStyle="bold" 
        
        />




    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/BACK"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="0dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        
        
        android:src="@drawable/goback" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="81dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HOME"
        android:src="@drawable/home1" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="162dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/backss" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_x="243dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/homess" />

</AbsoluteLayout>

</AbsoluteLayout>