<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simpleGM_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/my" >

    <TextView
        android:id="@+id/simpleGM_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="5dp"
        android:textColor="#ff000000"
        android:text="@string/address" />

    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="20dip"   
    android:paddingTop="3dip" >

    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/QUICK_AID"
        android:textColor="#ff000000"
        android:textSize="20dip"
        android:textStyle="bold" 
        
        />




    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/BACK"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="0dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        
        
        android:src="@drawable/goback" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="81dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HOME"
        android:src="@drawable/home1" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="162dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/backss" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_x="243dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/homess" />

</AbsoluteLayout>

    <com.google.android.maps.MapView
        android:id="@+id/simpleGM_map"
        android:layout_width="fill_parent"
        android:layout_height="355dp"
        android:layout_x="2dp"
        android:layout_y="98dp"
        android:apiKey="0icEWQjRktpQT1JT1X9qm7hsgFzsO0q22y6WiWQ"
        android:clickable="true" >

    </com.google.android.maps.MapView>

    <EditText
        android:id="@+id/simpleGM_adress"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="38dp"
        android:ems="10"
        android:hint="@string/input"
        android:textSize="18sp" />

    <Button
        android:id="@+id/simpleGM_btn_search"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_x="250dp"
        android:layout_y="42dp"
        android:background="@drawable/customb"
        android:text="@string/go" />

</AbsoluteLayout>