<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my"
    android:orientation="vertical"
     >

    
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="20dip"   
    android:paddingTop="3dip" >

    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/QUICK_AID"
        android:textColor="#ff000000"
        android:textSize="20dip"
        android:textStyle="bold" 
        />




    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/BACK"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="0dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        
        
        android:src="@drawable/goback" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="81dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HOME"
        android:src="@drawable/home1" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="162dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/backss" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_x="243dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/homess" />

</AbsoluteLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_x="4dp"
        android:layout_y="28dp"
        android:text="@string/ENTER_A_CITY"
        android:textColor="#ff000000" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:layout_x="0dp"
        android:layout_y="45dp" />

    <Button
        android:id="@+id/search"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_x="4dp"
        android:layout_y="94dp"
        android:background="@drawable/customb"
        android:text="@string/GO" />

</AbsoluteLayout>
    