<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/my" >

    <ImageButton
        android:id="@+id/btn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="65dp"
        android:layout_y="65dp"
        android:src="@drawable/atm"
         android:background="@drawable/customb" />

    <ImageButton
        android:id="@+id/btn4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="180dp"
        android:layout_y="65dp"
        android:src="@drawable/blood1" 
         android:background="@drawable/customb"/>

    <ImageButton
        android:id="@+id/btn6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="65dp"
        android:layout_y="175dp"
        android:src="@drawable/gas"
         android:background="@drawable/customb" />

    <ImageButton
        android:id="@+id/btn1"
    android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="180dp"
        android:layout_y="175dp"
        android:src="@drawable/hosp" 
         android:background="@drawable/customb"/>

    <ImageButton
        android:id="@+id/btn3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="65dp"
        android:layout_y="285dp"
        android:src="@drawable/police" 
         android:background="@drawable/customb"/>

    <ImageButton
        android:id="@+id/btn5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="180dp"
        android:layout_y="285dp"
        android:src="@drawable/vet"
         android:background="@drawable/customb" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="78dp"
        android:layout_y="130dp"
        android:text="@string/ATM"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="162dp"
        android:layout_y="129dp"
        android:text="@string/BLOOD_BANK"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#ff000000"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="43dp"
        android:layout_y="238dp"
        android:text="@string/PETROL"
        android:textColor="#ff000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="172dp"
        android:layout_y="239dp"
        android:text="@string/hospital"
        android:textColor="#ff000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="64dp"
        android:layout_y="351dp"
        android:text="@string/POLICE"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="192dp"
        android:layout_y="350dp"
        android:text="@string/VET"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff000000" />

    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="20dip"   
    android:paddingTop="3dip" >

    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/QUICK_AID"
        android:textColor="#ff000000"
        android:textSize="20dip"
        android:textStyle="bold" 
        
        />




    <ImageButton
        android:id="@+id/back"
        android:contentDescription="@string/BACK"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="0dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        
        
        android:src="@drawable/goback" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="81dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HOME"
        android:src="@drawable/home1" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_x="162dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/backss" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_x="243dp"
        android:layout_y="-3dp"
        android:background="@drawable/customb1"
        android:contentDescription="@string/HELP"
        android:src="@drawable/homess" />

</AbsoluteLayout>
    
</AbsoluteLayout>